apps/juxtaposition-ui/webfiles/portal/css/juxt.css
/* ... */
.headline-green {
 background:#59c9a5 url("data:image/svg+xml,%3Csvg width='1080' xmlns='http://www.w3.org/2000/svg' height='60' style='background-color:%2359c9a5' fill='%23bdede0'%3E%3ClinearGradient xmlns='http://www.w3.org/2000/svg' gradientUnits='objectBoundingBox' y1='0' id='overlay' y2='0' x2='1' x1='0'%3E%3Cstop offset='0.2' stop-color='%2359c9a5'/%3E%3Cstop offset='1' stop-opacity='-2' stop-color='%2359c9a5'/%3E%3C/linearGradient%3E%3Cg xmlns='http://www.w3.org/2000/svg'%3E%3Cg stroke-width='0' id='svg_23'%3E%3Crect rx='5' id='svg_4' height='60' width='60' y='30' x='1050'/%3E%3Crect rx='5' id='svg_9' height='60' width='60' x='210' y='30'/%3E%3Crect rx='5' id='svg_10' height='60' width='60' y='-30' x='270'/%3E%3Crect rx='5' id='svg_11' height='60' width='60' y='30' x='330'/%3E%3Crect rx='5' id='svg_12' height='60' width='60' y='-30' x='390'/%3E%3Crect rx='5' id='svg_13' height='60' width='60' y='30' x='450'/%3E%3Crect rx='5' id='svg_14' height='60' width='60' y='-30' x='510'/%3E%3Crect rx='5' id='svg_15' height='60' width='60' y='30' x='570'/%3E%3Crect rx='5' id='svg_16' height='60' width='60' y='-30' x='630'/%3E%3Crect rx='5' id='svg_17' height='60' width='60' y='30' x='690'/%3E%3Crect rx='5' id='svg_18' height='60' width='60' y='-30' x='750'/%3E%3Crect rx='5' id='svg_19' height='60' width='60' y='30' x='810'/%3E%3Crect rx='5' id='svg_20' height='60' width='60' y='-30' x='870'/%3E%3Crect rx='5' id='svg_21' height='60' width='60' y='30' x='930'/%3E%3Crect rx='5' id='svg_22' height='60' width='60' y='-30' x='990'/%3E%3C/g%3E%3C/g%3E%3Crect width='1080' height='60' fill='url(%23overlay)'/%3E%3C/svg%3E")no-repeat
}
.communities-list {
 margin-top:10px
}
.communities-list .list-content-with-icon-column li {
 padding:10px 0;
 margin:0 25px 0-10px;
 width:330px;
 min-height:96px;
 float:left
}
.communities-list .list-content-with-icon-column li:last-child {
 margin-bottom:15px
}
.communities-list.double .list-content-with-icon-column .title {
 width:465px
}
.communities-list.double .list-content-with-icon-column .to-community-button,
.communities-list.double .list-content-with-icon-column li {
 width:585px
}
.list-content-with-icon-and-text li,
.list-content-with-icon-column li {
 position:relative;
 min-height:96px;
 padding:19px 20px 18px;
 margin:0-20px;
 border-bottom:3px dotted #d2b0e1;
 overflow-y:hidden
}
.list-content-with-icon-and-text li:first-child {
 margin-top:-19px
}
.list-content-with-icon-and-text .icon-container,
.list-content-with-icon-column .icon-container {
 float:left;
 display:block;
 box-shadow:0 3px 10px rgba(0,0,0,.6);
 background:#000;
 margin-left:10px
}
.list-content-with-icon-column .icon-container {
 width:96px;
 height:96px;
 border-radius:12px
}
.list-content-with-icon-and-text .icon-container,
.list-content-with-icon-column .icon-container img {
 width:96px;
 height:96px;
 border-radius:12px;
 background-color:#fff;
 user-select:none
}
.list-content-with-icon-and-text .body,
.list-content-with-icon-column .body {
 margin-left:110px
}
.list-content-with-icon-and-text .title,
.list-content-with-icon-column .title {
 overflow:hidden;
 text-overflow:ellipsis;
 display:block;
 white-space:nowrap;
 font-size:25px;
 font-weight:initial;
 line-height:35px;
 color:#323232
}
.list-content-with-icon-and-text .text,
.list-content-with-icon-column .text {
 overflow:hidden;
 text-overflow:ellipsis;
 display:block;
 white-space:nowrap
}
.list-content-with-icon-column .text {
 font-size:25px;
 font-weight:initial;
 line-height:35px;
 color:#323232
}
.list-content-with-icon-and-text .text {
 height:40px;
 line-height:32px;
 font-weight:400;
 font-size:24px;
 color:#646464
}
.communities-list .list-content-with-icon-column .to-community-button {
 display:block;
 position:absolute;
 top:0;
 left:0;
 width:330px;
 max-width:none;
 min-height:96px;
 height:100%;
 margin:0
}
.communities-list .list-content-with-icon-column .body {
 min-height:96px;
 -webkit-box-align:center;
 box-sizing:border-box;
 padding-left:10px
}
.communities-list .list-content-with-icon-column .title {
 font-size:24px;
 line-height:28px;
 text-overflow:inherit;
 white-space:normal;
 width:210px;
 max-height:58px;
 word-wrap:break-word;
 display:block;
 margin-top:0;
 margin-bottom:5px
}
.communities-list .text {
 display:block;
 height:28px;
 margin-bottom:-8px;
 line-height:28px;
 font-weight:400;
 font-size:20px;
 color:#969696
}
#messages-list .list-content-with-icon-and-text .id-name {
 margin-left:5px;
 font-size:20px;
 font-weight:400;
 color:#969696
}
#messages-list .list-content-with-icon-and-text .timestamp {
 position:absolute;
 float:right;
 font-size:20px;
 font-weight:400;
 color:#969696;
 top:50px;
 right:65px
}
#messages-list>ul>li>.body {
 margin-left:125px;
 margin-top:10px;
 margin-right:1em;
 user-select:none
}
.icon-container>.icon {
 width:96px;
 height:96px
}
.arrow-button {
 width:1060px;
 height:123px;
 position:absolute;
 top:5px;
 overflow-y:hidden
}
.arrow-button:after {
 position:absolute;
 display:block;
 width:50px;
 height:50px;
 top:37px;
 right:0;
 border-radius:1em;
 content:" ";
 background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' fill='%23ffffff' viewBox='0 0 256 256' style='stroke: black;'%3E%3Crect width='256' fill='none'/%3E%3Cpolyline points='96 48 176 128 96 208' fill='none' stroke-linecap='round' stroke-linejoin='round' stroke-width='40'/%3E%3C/svg%3E")no-repeat 10px 10px,-webkit-gradient(linear,left top,left bottom,from(#fff),color-stop(.3,#fff),color-stop(.8,#fff5f5),color-stop(.96,#fff5f5),to(#fff5f5))0 0
}
.body-content.post-list {
 margin:0 0 30px 200px
}
.post-list .post {
 padding:15px 0
}
.post-list .post .mii-icon-container {
 position:relative;
 display:block;
 float:left;
 width:96px;
 height:96px;
 margin-right:20px;
 border-radius:12px;
 box-shadow:0 3px 10px rgba(0,0,0,.4)
}
.post-list .post .mii-icon-container:last-child {
 margin-right:-15px
}
/* ... */

